# Taskflow

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  setup.sh  start_services.sh  task_logs.py
examples/: basic_usage.py
static/css/: dashboard.css
taskflow/: __init__.py  tasks.py
taskflow/api/: main.py  models.py
taskflow/cli/: main.py
taskflow/cli/commands/: config.py  monitor.py  queue.py  server.py  task.py  worker.py
taskflow/core/: engine.py  queue.py  task.py
taskflow/db/: database.py  models.py  repositories.py
taskflow/monitoring/: alerts.py  metrics.py
taskflow/utils/: config.py  exceptions.py  logging.py  recovery.py
taskflow/workers/: balancer.py  worker.py
templates/: dashboard.html
